# rust-rsrch

hyper/serve-static/: Cargo.toml  Makefile
hyper/serve-static/src/: bin.rs  lib.rs  result.rs  serve.rs  stream.rs
hyper/serve-static/tests/: integr1.rs
hyper/serve-static/tests/util/: file.rs  hash.rs  http.rs  mod.rs
tokio/rw-lock/: Cargo.toml  Makefile
tokio/rw-lock/src/: bin.rs
